--- a/study-plan.Rmd
+++ b/study-plan.Rmd
@@ -10,7 +10,7 @@ output: pdf_document
 
 Introduction 
 ============
-Trauma is defined as the clinical entity composed of both physical injury and the body’s associated response. [MeSH] Trauma patients are a heterogeneous group with a wide range of different causes the most prominent ones are traffic related injuries, falls, self-harm, interpersonal violence and burns. Trauma is a global health problem and the total number of injuries<!-- Do you mean patients with injuries?--> is estimated to be at least 520 million cases per year. [@James2020] 
+Trauma is defined as the clinical entity composed of both physical injury and the body’s associated response. [MeSH] Trauma patients are a heterogeneous group with a wide range of different causes the most prominent ones are traffic related injuries, falls, self-harm, interpersonal violence and burns. Trauma is a global health problem and the total number of patients with injuries is estimated to be at least 520 million per year. [@James2020] 
 
 The effects of trauma on patients and their families can be divided into non-fatal and fatal trauma. The effects of non-fatal trauma can be subdivided into Disability Adjusted Life Years (DALY) lost and economical effects. DALY is a measurement using both the mortality in years lost between mean age and death and morbidity as in years lived with reduced function due to the disease. In 2017 trauma accounted for 13% of total DALY lost globally. [@GBD2017DALY] The economic effects are both out of pocket expenses for treatment as well as reduced ability to work after injury. A study in northern India from 2019 calculated that 22% of patients who presented with traumatic injuries afterward had 30% or more of their total expenditure on healthcare related costs and 12 % were pushed below the international poverty line as a consequence. [@Prinja2019]
 
@@ -20,9 +20,9 @@ It is known that most fatalities in response to traumatic injuries occur shortly
 
 For patients with severe infections the Sequential Organ Failure Assessment (SOFA) score was developed in 1994 to grade the level of organ dysfunction in critically ill patients. The SOFA score is based on the reduced function scored 0-4 for each of the respiratory, cardiovascular, neurological, hepatic, coagulation and renal systems. Initially the focus was mainly patients suffering from severe infections and sepsis, but it was early recognized to be applicable in a wide range of critical illnesses. [@Lambden2019] 
 
-Alongside the last revision of the sepsis definition in 2016 the quick Sequential Organ Failure Assessment score (qSOFA score) was developed. The qSOFA score includes three parameters: Systolic blood pressure (SBP) below 100 mmHg, a respiratory rate (RR) above 22 min and an altered consciousness, measured with a Glasgow Coma Scale (GCS) score below 15. One point is awarded for each parameter yielding a total score of 0-3. Introduced as a screening tool, to be performed bedside to identify patients with high-risk of organ dysfunction due to infections. [@David2017],[@Shankar2016]<!-- Is suggest that you combine references like [@David2017; @Shankar2010] to have them correctly rendered -->qSOFA has lately also been shown to predict mortality in trauma patients both in prehospital and hospital settings [@Miyamoto2019; @Miyamoto2020].
+Alongside the last revision of the sepsis definition in 2016 the quick Sequential Organ Failure Assessment score (qSOFA score) was developed. The qSOFA score includes three parameters: Systolic blood pressure (SBP) below 100 mmHg, a respiratory rate (RR) above 22 min and an altered consciousness, measured with a Glasgow Coma Scale (GCS) score below 15. One point is awarded for each parameter yielding a total score of 0-3. Introduced as a screening tool, to be performed bedside to identify patients with high-risk of organ dysfunction due to infections. [@David2017;@Shankar2016]qSOFA has lately also been shown to predict mortality in trauma patients both in prehospital and hospital settings [@Miyamoto2019; @Miyamoto2020].
 
-Another tool to assess the severity of a patient’s condition due to trauma is the Revised Trauma Score (RTS) and the Triage Revised Trauma Score (T-RTS), which include the same parameters as qSOFA - GCS, SBP and RR - but with a score of 0-4 for each parameter instead of a single criteria. The scores can either be presented individually as used in RTS or added together to a total of 0-12 used in the T-RTS. RTS was intended for outcome evaluation and assessment of injury severity and the T-RTS for triage and finding patients a prehospital or initial setting in most need of specialized trauma care [@Champion1989] However there are some articles raising concerns about the sensitivity of T-RTS depending on the type of injury. [@Giannakopoulos2011],[@Alvarez2016]
+Another tool to assess the severity of a patient’s condition due to trauma is the Revised Trauma Score (RTS) and the Triage Revised Trauma Score (T-RTS), which include the same parameters as qSOFA - GCS, SBP and RR - but with a score of 0-4 for each parameter instead of a single criteria. The scores can either be presented individually as used in RTS or added together to a total of 0-12 used in the T-RTS. RTS was intended for outcome evaluation and assessment of injury severity and the T-RTS for triage and finding patients a prehospital or initial setting in most need of specialized trauma care [@Champion1989] However there are some articles raising concerns about the sensitivity of T-RTS depending on the type of injury. [@Giannakopoulos2011;@Alvarez2016]
 
 Because of the inherent urgency and complexity in trauma care it is vital to have an initial scoring system that is both simple to perform and that does not need laboratory nor other advanced measuring equipment. For this reason, the SOFA score can be said to use too advanced techniques and the T-RTS with its many categories to be too complicated. The choice of using qSOFA is thus because of its promising signs in other studies and because of the possible clinical advantage in its simplicity.  
 
@@ -55,7 +55,7 @@ This study involved an analysis of the observational cohort Towards Improved Tra
 
 -->
 
-We conducted a retrospective analysis of the observational Towards Improved Trauma Care Outcomes in India (TITCO) cohort [@TITCO] <!-- TITCO collaborators (2017). TITCO dataset version 1. Available from https://github.com/titco/titco-I. (Behöver läggas in i .bib)-->. The data for TITCO was collected during july 2013 to december 2015 and contains patients admitted to four public university hospitals. The hospitals included were; Jai Prakash Narayan Apex Trauma Center (JPNATC), connected to the All India Institute of Medical Sciences in New Delhi, a large centre soley dedicated to trauma care; King Edward Memorial hospital (KEM) in Mumbai, a tertiary level hospital but without dedicated truma wards; Lokmanya Tilak Municipal General Hospital (LTMGH) in Mumbai, a tertiary lever public university hospital with a smaller dedicated truma ward; and Seth Sukhlal Karnani Memorial Hospital (SSKM) in Kolkata, connected to The Institute of Post-Graduate Medical Education and Research, a tertiary level public university hospital without a ward dedicated soley to trauma.
+We conducted a retrospective analysis of the observational Towards Improved Trauma Care Outcomes in India (TITCO) cohort [@TITCO] <!-- TITCO collaborators (2017). TITCO dataset version 1. Available from https://github.com/titco/titco-I. (Behöver läggas in i .bib)-->. The data for TITCO was collected during july 2013 to december 2015 and contains patients admitted to four public university hospitals. The hospitals included were; Jai Prakash Narayan Apex Trauma Center (JPNATC), connected to the All India Institute of Medical Sciences in New Delhi, a large centre soley dedicated to trauma care; King Edward Memorial hospital (KEM) in Mumbai, a tertiary level hospital but without dedicated truma wards; Lokmanya Tilak Municipal General Hospital (LTMGH) in Mumbai, a tertiary lever public university hospital with a smaller dedicated truma ward; and Seth Sukhlal Karnani Memorial Hospital (SSKM) in Kolkata, connected to The Institute of Post-Graduate Medical Education and Research, a tertiary level public university hospital without a ward dedicated solely to trauma.
 
 
 ## Participants
@@ -67,7 +67,7 @@ general population) including number and location of centres. [D;V]
 Patients included in the TITCO cohort were those presenting to one of the participating centres with traumatic injury following a transport accident, fall, assault, self‐harm or burn, and who were alive on arrival and admitted to the hospital for treatment. Patients with an isolated limb injury were excluded from the database as such patients are treated by orthopaedic surgeons and not within trauma care pathway, which comprises a first survey done by a surgical resident with an on‐call consultant surgeon and subsequent observation or surgery. Patients from the TITCO cohort who were aged 15 years or older and underwent surgical intervention within 24 h of arrival were included in this study.
 -->
 
-The TITCO cohort include patients with a history of trauma who either got admitted to one of the participating hospitals or who died between arrival and admission. Patients with isolated injurys to limbs and that therefore were treated by orthopaedics and not within the general trauma care were excluded from the database alwell as patients who were dead on arrival.
+The TITCO cohort include patients with a history of trauma who either got admitted to one of the participating hospitals or who died between arrival and admission. Patients with isolated injurys to limbs and that therefore were treated by orthopaedics and not within the general trauma care were excluded from the database aswell as patients who were dead on arrival. 
 
 
 ## Outcome
@@ -95,7 +95,7 @@ For each patient included in the study the qSOFA score was calculated using data
 8) Explain how the study size was arrived at [D;V]
 -->
 
-We included all eligible patients in the TITCO cohort. <!-- Should this be justified in any way that we found this to be a suffient amount of datapoints for our aim? should we later add how many that turned out to be?-->
+We included all patients in the TITCO cohort above the age of 18 who was alive at admission to the hospital except patients with externally controlled breathing upon arrival, either through intubation or a surgical airway. <!-- Is this the correct place to add exclussion critera or should it be up on participants instead??-->
 
 ## Missing data
 <!--
@@ -103,12 +103,6 @@ We included all eligible patients in the TITCO cohort. <!-- Should this be justi
 imputation, multiple imputation) with details of any imputation method. [D;V]
 -->
 We will use complete-case analysis. 
-
-<!--
-To adress missing data multiple imputation was used. __How specific should this description be? should there be an explanation on how many regressions where used and the size of the random samples yielding the regressions? programs used? Are there any protocols thats usualy used that i can refer to? i know roughly what multiple imputation is but no idea how to implement it...__ 
--->
-<!-- Multiple imputation is quite advanced so I suggest we use a complete case analysis, i.e. we exclude patients with missing data-->
-<!-- 
 
 
 ## Statistical analysis methods
@@ -161,26 +155,6 @@ We identified the following revised optimal cutoffs: `r boot.cis$cut.sbp[["pe"]]
 | GCS       | 4.31(9.96-4.69) | `r ors[["new.gcs_score"]]` |`r CIs$cut.gcs`          |
 Table: Table 2 Original and updated OR for the logistic regression model 
 
-<!-- there is something wrong with the code... after running 1000 bootstraps i got this result.
-ors[["new.rr_score"]]
-[1] "0.783 (-830742.207 - 760171.166)"
-$updated.coefs.new.rr_score
-[1] "-0.244 (-4.269 - 1.981)" 
-
-
-and when going to the raw data from the result of updated.coefs.new.rr_score the mean(0.6555935) & median(0.4695019) and max(15.83363)/min(-1.120455). and for ors.new.rr_score: mean(35287.09) & median(1.599198) and max(7524136)/min(-0.3261313)
-
-
-this makes me think that we get some few outliers that skew the results massivley probably when the cut.rr is so high that only one patient qualify making the coefficient high, in 11 cases the coeff was over 10 with a cut.rr [34 32 34 36 40 34 36 34 34 34 36] and only 11 cases where the OR was over 20 and then it was like 10^6... i dont realy understand how the boot.ci() works but somehow the CIs are absolutely out of control when we have these kind of outliers... 
-
-also regarding the ors for sbp_score:
-ors[["new.sbp_score"]]
-[1] "1.269 (-0.715 - 1.833)"
-
-somehow the CIs gives a negative value which shouldnt be possible and when i look at the raw results from the bootstrap only one out of 1000 have a OR < 1. mean(1.979518),median(1.88884), max(4.191026), min(0.9627057). why is this the case that the calculated CIs are so different.
-
-
--->
 
 The estimated probability of ICU admission and corresponding OR given the OR from table 2 and the distribution of the individual parameters in the study sample are presented in table 3 and 4.  
 
@@ -226,49 +200,35 @@ Discussion
 ========
 
 <!-- aim and how it went, --->
-The aim of this study was to asses the validity of the qSOFA score in predicting ICU admissions in trauma patients. In the context of urban Indian hospitals the original qSOFA score with its original cutoffs and coefficients did not accurately predict ICU admission. The original model underestimated the probability of ICU admission as can be seen in _FIGURE showing ICI plots_. When updating the model adjusting the cutoffs and coefficients the new model performs significantly better both in terms of ICI and AUC.
+The aim of this study was to asses the validity of the qSOFA score in predicting ICU admissions in trauma patients. We found that in the context of urban Indian hospitals the original qSOFA score with its original cutoffs and coefficients did not accurately predict ICU admission. The original model underestimated the probability of ICU admission as can be seen in _FIGURE showing ICI plots_. When updating the model adjusting the cutoffs and coefficients the new model performs significantly better in terms of ICI and slightly better in terms of AUC. 
 
 
-<!-- usage and implication -->
-The estimated probabilities for the new model ranges from `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.three[["pe"]]`. Where the highest value, corresponding to a score of three, can be said to be a clear overestimation and not accounting for a large portion of patients<!-- I've read this sentence multiple times but I don't get it. Can you try to revise, what do you mean by "not accounting for a large portion of patients"?-->. A more realistic span is that off 0-2 points, or a probability of `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.two[["pe"]]` percent<!-- Same here, not obvious to me what this means -->. Because of this relatively high base line probability of `r boot.cis$est.prob.sum.new.none[["pe"]]`% the updated model can not in itself be used to exclude patients with a low score from the future need of intensive care. Nor can it with certainty predict that patients with a high score will be admitted to the ICU although there exists a significantly higher risk that they will.  
+<!-- Strenghts -->
+  
 
-This can be contrasted with the original use of the qSOFA score for which a score of 0 corresponded to a mortality of 1  <!-- approx taken from figure --> percent and a score of 2-3 correspond to a much higher mortality of 7-20 %<!-- taken from figure ish-->. This makes the original qSOFA in the context of screening for risk of dying due to severe infections a good tool to sort patients with a low score to also be of a low risk of dying.
+<!-- usage and limitation -->
 
-<!-- It can also be noted that out of the three parameters used in the updated model only GCS was significantly associated with a higher risk of ICU admission. This can be partially explained by that new cutoffs where calculated for each bootstrap resulting in different cutoffs being evaluated resulting in an increased uncertainty. It could also be that RR and SBP does not have a significant correlation to ICU admission. Although the data suggest that there is a correlation and therefore a possibility of using it in the formation of a predictive model the result is not significant. --> <!-- körde om bootstrapen igen och då fick jag ett annat resultat så stryker denna för nu... -->
 
-<!--limitations --->
+While developing the original qSOFA score as a screening tool for patients with an increased risk of dying from severe infection it was shown that a low score of 0-1 corresponded to a mortality of approximately 1-2 percent and that a high score of 2-3 corresponded to a significantly higher mortality of 7-20 %. When using the predetermined cutoff value of 2 points this result made the original qSOFA a useful tool to be able to sort patients with a low score to also be of a low risk of dying. On the other hand the results also allowed for that patients with a higher score could be more closely monitored and get access to treatment before more severe symptoms developed. 
 
-Because of the composition and context of the TITCO database the results are likely to be generalizable to similar settings, that is to other urban hospitals of similar economic and resource level. It is not clear whether the results can be used in rural settings or setting with higher or lower resource levels. 
+Contrast this to the results from the updated model used in the context of predicting ICU admission of trauma patients as have been done in this study. Our findings shows that a low score of 0-1 correspond to a probability for ICU admission of `r boot.cis$est.prob.sum.new.none[["pe"]]`-`r boot.cis$est.prob.sum.new.one[["pe"]]`% and a high score of 2-3 correspond to a mortality of `r boot.cis$est.prob.sum.new.two[["pe"]]`-`r boot.cis$est.prob.sum.new.three[["pe"]]` %. This shows that regardless of the score the patients still have a relatively high risk for ICU admission. Although a higher score is shown to correlate with a higher risk of ICU admission it is not clear what clinical relevance this score would have in the process of deciding the adequate level of care for patients with severe injuries. <!-- I think this better helps me to get my point across that the results are not clear enough that so it will not be possible to use the updated score in this context the same way as the original score was used the that context. -->
 
-It should also be noted that `r  p.transported` of the patients where for an unspecified time first treated at another hospital and then later transferred to one of the participating hospitals. Because of this the parameters used in this study only shows the first ones taken at arrival to the participating hospital and not always the first ones taken after the injury and does not take into account any interventions performed before arrival or between arrival and admission to the ICU.
+The results also showed that out of the parameters included in the qSOFA respiratory rate was not significantly associated with a higher risk of ICU admission, OR of `r ors[["new.rr_score"]]`. This can be partially explained by that a new cutoff was calculated for each bootstrap resulting in different cutoffs being used while evaluating the model in turn leading to an increased uncertainty. Further research is needed before the original or an updated qSOFA score as presented in this study can be used in clinical desicionmaking.   
 
-Furthermore out of the `r results$n.adults` patients above the age of 18 only `r results$n.complete` had complete data, or `r results$n.complete/results$n.adults`%. With this amount of missing data it is unclear if the data can be said to be missing completely at random or if there are any underlying factors contributing to the missing of data that could skew the results leading to a higher uncertainty regardless of bootstraping<!-- Does the amount of missing data really say anything about the pattern of missing data?--> <!-- No and thas what i want to caspulate that we can not now... so I still want to add something about the amount of missing data but not sure how... --> <!-- You can compare the amount of missing data to other studies and you can reflect on the selection bias that is introduced by only analysing complete cases-->.
+Although no other studies have been done correlating qSOFA to ICU admission studies have explored the conection between qSOFA and mortality both regarding patients with risk for sepsis [Orgianlkälla] and trauma patients.[@Miyamoto2020] Both these studies show that there is a clear connection between the qSOFA score and mortality and that the ORs as well as the AUCs is higher when looking at mortality in both studies compared to the results for this study. Although the AUCs only differ slightly. It can be argued that both ICU admission and mortality results from a more severe patient condition and thus will be correlated. However it should be noted that there exists patients who died without being admitted to the ICU reducing this correlation. This could be partly because patient where so severely injured that they either died before being able to be transferred to the ICU or it was decided that intensive care would not be of use for the patients. But it could also be due to a lack of ICU beds in the participating hospitals such that patients had to be prioritized for intensive care and not all patients who would benefit from it got admitted to the ICU. For context the number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan. (Källa 19) To be able to explore this question more thoroughly further research is needed. 
 
-[@Miyamoto2020] Comparing this to the results by Miyamoto on trauma patients in Japan where they looked at the qSOFA scores predictive power on mortality they showed that in their sample an elevated qSOFA score of 2-3 upon arrival to the hospital had an odds ratio compared with that of a score of 0 of 2.92-4.84 depending on the prehospital score. They also calculated that in their sample qSOFA had an AUC of 0.69-0.76.
+The study had several limitations. First the data collected for the TITCO database came from a homogeneous group of participating hospitals all in urban settings in India. Because of this it is not clear that the results presented here are generalizable to for example hospitals with a rural location or a different economic level. 
 
-Another comparison can be made to that of the development In its original context the qSOFA model had an AUC for mortality of 0.66 for patients treated at the ICU and 0.81 for patients without ICU encounters. The original OR for the parameters can be seen in table 2. (orginalkällan)<!-- What are you comparing this to? Are you comparing the findings of Miyamoto with the findings of the original qSOFA paper? This needs to be clarified --> 
+Second it should be noted that `r  p.transported` percent of the patients where for an unspecified time first treated at another hospital and then later transferred to one of the participating hospitals. Because of this the parameters used in this study only shows the first ones taken at arrival to the participating hospital and not always the first ones taken after the injury. furthermore the results in this study does not take into account any interventions performed before arrival or between arrival and admission to the ICU.
 
-Although these studies looked at mortality and not ICU admission one can see that both the mentioned studies had a comparable but slightly higher AUC and a higher OR than can be shown in this study. This is to be somewhat expected since it can be argued that although there is a connection between ICU admission and mortality through severity of that patients condition there were patients who died without being treated in the ICU<!-- Do you mean that both probability of mortality and probability of ICU admission can be considered measures of injury severity?-->. The reason for this<!-- Reasons for what exactly?--> is not certain but one can argue that this is because the patients condition was such that the patients either died before they could be admitted to the ICU, the doctors decided that intensive care would not be of benefit for the patient, or due to a lack of resources or ICU beds such that patients had to be prioritized for intensive care and not all patients who would benefit from it got admitted to the ICU. For context the number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan. (Källa 19)
 
-<!--It's a bit all over the place right now lacking a common thread but i wanted to add all the parts first and then adjust and rearange depending on your feedback --> 
+<!-- future research -->
+A way for future research to investigate the usage of qSOFA in ICU admission would be to look at ICU admission, qSOFA score and mortality and investigate whether patients depending on their qSOFA score who where admitted to the ICU had a lower morality compared to patients with the same qSOFA score not admitted to the ICU. The aim of this would be to decide which patients would be the most helped by intensive care to better allocate the resources on hand. 
+
+
+##Conclusion
+An updated qSOFA score can be used to estimate the overall risk for ICU admission in trauma patients in urban India hospitals but more research is needed before it can be implemented and used in clinical decision making.
+
 
 
 <!-- Add strengths and limitations, implications for future research and practice, and conclusions -->
-
-## Questions:
-
-From coordinator:
-
-* Why are hospitals without trauma wards included?(in the TITCO cohort)
-
-Most hospitals in India, like in Sweden, don't have trauma specific wards. They still treat large volumes of trauma patients.
-
-* Some more consideration of risks would be good [in ethical consideration] -- especially the potential to stigmatize vulnerable participants [i.e. low socioeconomic status]. How will this be avoided?
-
-Not sure about this. Can you reason about what stigma that might be?
-
-Mine: 
-* Baseline risk and coefficient corresponding to that. Is it really best to take it directly from the original paper as a fair comparison or should it be adjusted for our data to get a better perspective for discussion? And I only found a figure in the supplementary material and no numbers, should i estimate what can be read from the figure or is there a better way, it was however really small just a few percent?
-
-I would estimate it from the figure. The idea would be to see if the original score works, and therefore no adjustments are necessary, or if one needs to use an updated score, like the one you're developing. Only updating the baseline risk is somewhere in between these two options, which is also possible, but would add a third model.
-
